TS/local/logs/project.log
2024-09-24 17:48:01-log: [Package] menu@1.0.0 enable
2024-09-24 17:48:01-log: [Package] profile@1.0.0 enable
2024-09-24 17:48:01-log: [Package] project@1.0.1 enable
2024-09-24 17:48:01-log: [Package] messages@1.0.0 enable
2024-09-24 17:48:01-log: [Package] program@1.0.0 enable
2024-09-24 17:48:01-log: [Package] device@1.0.1 enable
2024-09-24 17:48:01-log: [Package] ui-kit@1.0.1 enable
2024-09-24 17:48:01-log: [Package] tester@1.0.0 enable
2024-09-24 17:48:01-log: [Package] preferences@1.0.0 enable
2024-09-24 17:48:03-log: Setup mods mgr.: 1.603s
2024-09-24 17:48:03-log: [Package] engine@1.0.5 enable
2024-09-24 17:48:11-log: [Package] programming@1.0.0 enable
2024-09-24 17:48:12-log: [Package] engine-extends@1.0.0 enable
2024-09-24 17:48:12-log: [Package] asset-db@1.0.0 enable
2024-09-24 17:48:12-log: [Package] console@1.0.0 enable
2024-09-24 17:48:12-log: [Package] scene@1.0.0 enable
2024-09-24 17:48:12-log: [Package] about@1.0.0 enable
2024-09-24 17:48:13-log: [Package] server@1.0.0 enable
2024-09-24 17:48:13-log: [Package] utils@1.0.0 enable
2024-09-24 17:48:13-log: [Package] assets@1.0.0 enable
2024-09-24 17:48:13-log: [Package] inspector@1.0.0 enable
2024-09-24 17:48:13-log: [Package] hierarchy@1.0.0 enable
2024-09-24 17:48:17-error: [Window] Cannot read property 'map' of null
2024-09-24 17:48:19-log: [Package] builder@1.3.0 enable
2024-09-24 17:48:19-log: [Package] node-library@1.0.0 enable
2024-09-24 17:48:19-log: [Package] shortcuts@1.0.1 enable
2024-09-24 17:48:19-log: [Package] package-asset@1.0.0 enable
2024-09-24 17:48:19-log: [Package] reference-image@1.0.0 enable
2024-09-24 17:48:19-log: [Package] animation-graph@1.0.0 enable
2024-09-24 17:48:19-log: [Package] channel-upload-tools@1.0.0 enable
2024-09-24 17:48:19-log: [Package] runtime-dev-tools@1.0.0 enable
2024-09-24 17:48:19-log: [Package] lightmap@1.0.4 enable
2024-09-24 17:48:19-log: [Package] alipay-mini-game@1.0.0 enable
2024-09-24 17:48:19-log: [Package] android@1.0.0 enable
2024-09-24 17:48:19-log: [Package] baidu-mini-game@1.0.0 enable
2024-09-24 17:48:19-log: [Package] bytedance-mini-game@1.0.1 enable
2024-09-24 17:48:19-log: [Package] huawei-agc@1.0.0 enable
2024-09-24 17:48:19-log: [Package] ios@1.0.0 enable
2024-09-24 17:48:19-log: [Package] ios-app-clip@1.0.0 enable
2024-09-24 17:48:19-log: [Package] mac@1.0.0 enable
2024-09-24 17:48:20-log: [Package] native@1.0.0 enable
2024-09-24 17:48:20-log: [Package] ohos@1.0.0 enable
2024-09-24 17:48:20-log: [Package] web-desktop@1.0.0 enable
2024-09-24 17:48:20-log: [Package] web-mobile@1.0.0 enable
2024-09-24 17:48:20-log: [Package] wechatgame@1.0.1 enable
2024-09-24 17:48:20-log: [Package] windows@1.0.0 enable
2024-09-24 17:48:20-log: [Package] xiaomi-quick-game@1.0.0 enable
2024-09-24 17:48:20-log: [Package] cocos-play@1.0.0 enable
2024-09-24 17:48:20-log: [Package] huawei-quick-game@1.0.0 enable
2024-09-24 17:48:20-log: [Package] link-sure@1.0.0 enable
2024-09-24 17:48:20-log: [Package] oppo-mini-game@1.0.0 enable
2024-09-24 17:48:20-log: [Package] qtt@1.0.0 enable
2024-09-24 17:48:20-log: [Package] vivo-mini-game@1.0.0 enable
2024-09-24 17:48:21-log: [Package] cocos-service@3.0.2 enable
2024-09-24 17:48:21-log: [Package] importer@1.0.0 enable
2024-09-24 17:48:21-log: [Package] extension@3.0.15 enable
2024-09-24 17:48:22-log: [Im-plugin] Check im-plugin version.
2024-09-24 17:48:22-log: [Package] im-plugin@3.0.8 enable
2024-09-24 17:48:23-log: [Im-plugin] No online info of im-plugin.
2024-09-24 17:48:32-warn: Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
2024-09-24 17:48:32-log: [Scene] begin init
2024-09-24 17:48:32-log: [Scene] require engine end
2024-09-24 17:48:32-log: [Scene] Serialize end
2024-09-24 17:48:32-log: [Scene] configureStartup end
2024-09-24 17:48:32-log: [Scene] Cocos Creator v3.4.1
2024-09-24 17:48:33-info: [Scene] Forward render pipeline initialized.
2024-09-24 17:48:33-log: [Scene] openEngine end
2024-09-24 17:48:33-log: [Scene] configureEngine end
2024-09-24 18:25:34-warn: [Build] Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
2024-09-24 18:25:35-warn: [Build] Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db
2024-09-25 13:53:50-error: Failed to load module file:///D:/AS_Work/SDK/up_sdk_cocoscreater/TS/assets/Script/ATMainSceneScript.ts: SyntaxError: unknown: Unexpected token (91:4)

  89 |     gotoDebuggerUI():void{
  90 |         ATJSSDK.
> 91 |     }
     |     ^
  92 | }
  93 |
  94 |.
2024-09-25 13:53:50-error: Failed to load module file:///D:/AS_Work/SDK/up_sdk_cocoscreater/TS/assets/Script/ATMainSceneScript.ts: SyntaxError: unknown: Unexpected token (91:4)

  89 |     gotoDebuggerUI():void{
  90 |         ATJSSDK.
> 91 |     }
     |     ^
  92 | }
  93 |
  94 |.
2024-09-25 13:53:50-warn: [Scene] Missing class: a5e92uOHPVIv7qVrcxOEs6f
2024-09-25 13:53:50-error: [Scene] Error when checking MissingScript 7, SyntaxError: Unexpected token u in JSON at position 0
2024-09-25 13:53:50-warn: [Scene] Missing class: a5e92uOHPVIv7qVrcxOEs6f
2024-09-25 13:53:50-error: [Scene] Error when checking MissingScript 7, SyntaxError: Unexpected token u in JSON at position 0
2024-09-25 13:53:50-error: [Scene] Script "a5e92uOHPVIv7qVrcxOEs6f" attached to "ATMainSceneScript" is missing or invalid. Detailed information:
Script UUID: "a5e92b8e-1cf5-48bf-ba95-adcc4e12ce9f"
Class ID: "a5e92uOHPVIv7qVrcxOEs6f"

2024-09-25 13:53:50-error: [Scene] Script "a5e92uOHPVIv7qVrcxOEs6f" attached to "Canvas" is missing or invalid. Detailed information:
Script UUID: "a5e92b8e-1cf5-48bf-ba95-adcc4e12ce9f"
Class ID: "a5e92uOHPVIv7qVrcxOEs6f"

2024-09-25 13:53:50-error: [Scene] Script "a5e92uOHPVIv7qVrcxOEs6f" attached to "ATMainSceneScript" is missing or invalid. Detailed information:
Script UUID: "a5e92b8e-1cf5-48bf-ba95-adcc4e12ce9f"
Class ID: "a5e92uOHPVIv7qVrcxOEs6f"

2024-09-25 13:53:50-error: [Scene] Script "a5e92uOHPVIv7qVrcxOEs6f" attached to "Canvas" is missing or invalid. Detailed information:
Script UUID: "a5e92b8e-1cf5-48bf-ba95-adcc4e12ce9f"
Class ID: "a5e92uOHPVIv7qVrcxOEs6f"

